[package]
name = "labyrinth"
version = "1.0.2"
edition = "2021"
authors = ["Grzegorz Janysek"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph = { path = "../graph" }
clap = { version = "3.1", features = ["derive"] }
rand = "0.8"